# zmij

./: .clang-format  CMakeLists.txt  README.md  example.cc  gen-pow10.py  zmij-c.h  zmij-test.cc  zmij-to-chars.h  zmij.c  zmij.cc  zmij.h
.github/workflows/: ci.yml
test/: CMakeLists.txt  abtest.py  benchmark-all-commits.py  benchmark.cc  benchmark.h  benchmark.py  boundary-bits.h  canada.h  double-check.cc  dtoa-benchmark.cc  float-check.cc  ftoa-benchmark.cc  gen-pow10.py  modular-search-test.cc  modular-search.h  plot-results.py  pow10-test.cc  render-dtoa-charts.py  verify-double.cc  verify-float.cc  verify-test.py  verify.cc  verify.py  zmij-benchmark.cc  zmij-test.cc
test/dragonbox/: dragonbox_to_chars.cpp  dragonbox_to_chars.h
test/gtest/: CMakeLists.txt
